--- a/BreakOutBox/Views/Shared/_Layout.cshtml
+++ b/BreakOutBox/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
         @*<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />*@
         <link href="~/css/paper.css" rel="stylesheet" />
         <link rel="stylesheet" href="~/css/site.css" />
-        <link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet">
+        <link rel="stylesheet" href="~/css/groep.css" />
     </environment>
     <environment exclude="Development">
         @*<link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
@@ -19,9 +19,11 @@
               asp-fallback-href="~/lib/paper/paper.css"
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
-        <link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet">
+        <link rel="stylesheet" href="~/css/groep.min.css" asp-append-version="true" />
     </environment>
+    <link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet">
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+    <script src="https://unpkg.com/tippy.js@2.4.0/dist/tippy.all.min.js"></script>
 </head>
 <body>
     <div class="bgcolorwhite">
@@ -65,5 +67,15 @@
     </environment>
 
     @RenderSection("Scripts", required: false)
+    <script>
+        tippy('.tip', {
+            delay: 100,
+            arrow: true,
+            arrowType: 'sharp',
+            size: 'large',
+            duration: 100,
+            animation: 'shift-away'
+        })
+    </script>
 </body>
 </html>
