--- a/BreakOutBox/wwwroot/css/site.css
+++ b/BreakOutBox/wwwroot/css/site.css
@@ -171,7 +171,7 @@ object {
 }
 
 #pdf_hulp {
-    box-shadow: 0 7px 4px -6px rgba(0,0,0,0.5
+    box-shadow: 0 7px 4px -6px rgba(0,0,0,0.5);
 }
 
 
