Fix GroepDetailscherm, apply redesign

--- a/BreakOutBox/Views/Leerkracht/OverZichtGroep.cshtml
+++ b/BreakOutBox/Views/Leerkracht/OverZichtGroep.cshtml
@@ -1,6 +1,6 @@
 ﻿@model BreakOutBox.Models.Domain.Groep
 @{
-    ViewData["Title"] = "OverZichtGroep";
+    ViewData["Title"] = "Overzicht Groep";
 }
 
 <div class="row">
