--- a/BreakOutBox/Views/Leerkracht/OverzichtGroepenInSessie.cshtml
+++ b/BreakOutBox/Views/Leerkracht/OverzichtGroepenInSessie.cshtml
@@ -13,16 +13,42 @@
 <div class="row">
     @foreach (var groep in Model.Groepen)
     {
-        <div class="sm-12 md-6 col groep">
-            <h4><i class="fas fa-users fa-sm marginright"></i> Groep @(groep.GroepId)<i class="fas fa-times fa-sm erroricon"></i>@*<i class="fas fa-check fa-sm"></i>*@</h4>
-            <h6>Status: @groep.GetState().Beschrijving</h6>
+        <div class="sm-12 md-6 groep">
+            <span class="header"><i class="fas fa-users fa-fw icon"></i>Groep #@(groep.GroepId)</span>
             <ul>
+                <li><i class="far fa-question-circle fa-fw icon"></i>@groep.GetState().Beschrijving</li>
                 @foreach (var leerling in groep.Leerlingen)
                 {
-                    <li>@(leerling.Voornaam + " " + leerling.Achternaam)</li>
+                    <li><i class="far fa-user fa-fw icon"></i>@(leerling.Voornaam + " " + leerling.Achternaam)</li>
                 }
             </ul>
-            <h6><a asp-controller="Leerkracht" asp-action="OverzichtGroep" asp-route-id="@groep.GroepId" asp-route-id2="@Model.Code">Details<i class="fa fa-arrow-right" style="color:darkgreen"></i></a></h6>
+            <span class="icons">
+                @if (groep.State == 0 && groep.State != 2 && ViewBag.GeselecteerdeGroep == null)
+                {
+                    <a href="#" class="tip brown" title="Klik hier als dit jouw groep is">
+                        <i class="far fa-square"></i>
+                    </a>
+                }
+                @if (groep.State == 1 && groep.State != 2 && ViewBag.GeselecteerdeGroep != null && ViewBag.GeselecteerdeGroep.GroepId == groep.GroepId)
+                {
+                    <a href="#" class="tip brown" title="Klik hier om deze groep te deselecteren">
+                        <i class="far fa-check-square"></i>
+                    </a>
+                }
+                @if (groep.State == 1 && groep.State != 2 && ViewBag.GeselecteerdeGroep == null)
+                {
+                    <a href="#" class="tip brown" title="Een andere groep heeft deze groep al geselecteerd">
+                        <i class="far fa-times-circle"></i>
+                    </a>
+                }
+                @if (groep.State == 2)
+                {
+                    <a href="#" class="tip brown" title="Deze groep is vergrendeld">
+                        <i class="fas fa-lock"></i>
+                    </a>
+                }
+            </span>
+            <h6><a asp-controller="Leerkracht" asp-action="OverzichtGroep" asp-route-id1="@groep.GroepId" asp-route-code="@Model.Code">Details<i class="fa fa-arrow-right" style="color:darkgreen"></i></a></h6>
         </div>
     }
 </div>
