--- a/BreakOutBox/Views/Sessie/SessieOverzicht.cshtml
+++ b/BreakOutBox/Views/Sessie/SessieOverzicht.cshtml
@@ -61,7 +61,7 @@
         <p>
             @if (ViewBag.GeselecteerdeGroep != null)
             {
-                <a href="@Url.Action("StartSpel", "Sessie", new { sessiecode = Model.Code, groepId = ViewBag.GeselecteerdeGroep.GroepId.ToString() })">Simuleer leerkracht start sessie</a>
+                <a href="@Url.Action("StartSpel", "Sessie", new { sessiecode = Model.Code, groepId = ViewBag.GeselecteerdeGroep.GroepId.ToString() })">Start de eerste opdracht</a>
             }
             @*<a asp-controller="Spel" asp-action="SpelSpelen" asp-route="">Simuleer leerkracht start sessie</a>*@
         </p>
