--- a/BreakOutBox/wwwroot/css/site.css
+++ b/BreakOutBox/wwwroot/css/site.css
@@ -74,6 +74,10 @@ a, a, a:hover, a:visited, a:active, .text-danger {
     display: inline-block;
 }
 
+.groepdetails button {
+    display: inline-block;
+}
+
 ul li, ul {
     text-decoration: none;
     list-style-type: none;
@@ -195,5 +199,4 @@ object {
 }
 
 .tip {
-    font-size: 0.5em;
 }
