--- a/BreakOutBox/Views/Spel/SpelSpelen.cshtml
+++ b/BreakOutBox/Views/Spel/SpelSpelen.cshtml
@@ -12,12 +12,10 @@
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.js"></script>
-    
+
 
 
     <style>
-
-
     </style>
 
 </head>
@@ -37,12 +35,12 @@
             </p>
 
             @*<p>
-                <div class="w3-container" onclick="">
-                    <div class="w3-light-grey" style="width:60%;margin: auto;">
-                        <div class="w3-container w3-blue w3-center" style="width:@((int)progressiePercentageCompleted)%"><span style="color:black">@((int)(progressiePercentageCompleted))%&nbsp;correct&nbsp;opgelost</span></div>
+                    <div class="w3-container" onclick="">
+                        <div class="w3-light-grey" style="width:60%;margin: auto;">
+                            <div class="w3-container w3-blue w3-center" style="width:@((int)progressiePercentageCompleted)%"><span style="color:black">@((int)(progressiePercentageCompleted))%&nbsp;correct&nbsp;opgelost</span></div>
+                        </div>
                     </div>
-                </div>
-            </p>*@         
+                </p>*@
             <div>
                 <div id="pdf">
                     <object height="750" type="application/pdf" data="~/opdrachtenG1/@Model.Opdracht.Oefening.Opgave" id="pdf_content"></object>
@@ -62,19 +60,18 @@
                     <button type="button" class="" id="GaVerder" onclick="promalert()">Ga verder</button>
                 </div>
 
-                <div>
-                    <div id="Opnieuw" style="display:none">
-                        <p>Te veel foute antwoorden, vraag hulp aan de leerkracht.</p>
-
-                        @*button om terug te gaan naar het overzicht als de groep geblokkeerd is*@
-                        <button  type="submit" asp-controller="Sessie" asp-action="SessieOverzicht" asp-route-id="@Model.Sessie.Code">Probeer opnieuw.</button>
-                    </div>
-                   
-                    @if (Model.TellerFoutePogingen >= 1)
+                <div id="Opnieuw">
+                    @if (Model.TellerFoutePogingen > 2)
                     {
+                        <p>Te veel foute antwoorden, vraag hulp aan de leerkracht.</p>
                         <button onclick="hulp()" type="button">Hulp nodig?</button>
+                        @*button om terug te gaan naar het overzicht als de groep geblokkeerd is*@
+                        <button type="submit" asp-controller="Spel" asp-action="Opnieuw" asp-route-sessiecode="@Model.Sessie.Code">Probeer opnieuw.</button>
                     }
+
                 </div>
+
+
             </div>
 
             <div hidden>
@@ -90,14 +87,15 @@
 @section scripts {
     <script asp-src-include="lib/jquery-validation/dist/jquery.validate.js"></script>
     <script asp-src-include="lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
-    
+
 
     <script>
         console.log("Antwoord " + @Model.Opdracht.Oefening.Antwoord.ToString());
         console.log("Toegangscode " +@(Model.Groep.Pad.getNextOpdracht(Model.Opdracht).Toegangscode.Code.ToString()));
-        console.log("progressie% completed " + @((int)progressiePercentageCompleted));    
+        console.log("progressie% completed " + @((int)progressiePercentageCompleted));
     </script>
-    <script>       
+    <script>
+
         function promalert() {
 
             if (document.getElementById("Toegangscode").value == null || document.getElementById("Toegangscode").value == "") {
@@ -153,7 +151,7 @@
             } else {
                 if (@Model.TellerFoutePogingen >= 2) {
                     document.getElementById("Antwoord").style.display = 'none';
-                    document.getElementById("Opnieuw").style.display = 'block';
+                    document.getElementById("Opnieuw").stile.display = 'block';
 
                 }
                 else {
