remove build error

--- a/BreakOutBox/Views/Spel/SpelSpelen.cshtml
+++ b/BreakOutBox/Views/Spel/SpelSpelen.cshtml
@@ -162,7 +162,7 @@
 
     <script>
 
-        function blokkeerGroep() {
+        @*function blokkeerGroep() {
             if (@Model.TellerFoutePogingen >= 2) {
                 console.log("Test");
 
@@ -173,7 +173,7 @@
                 document.getElementById("Toegangscode").style.display = 'block';
                 document.getElementById("Antwoord").style.display = 'block';
             }
-        }
+        }*@
 
 
 
