--- a/BreakOutBox/Views/Spel/SpelSpelen.cshtml
+++ b/BreakOutBox/Views/Spel/SpelSpelen.cshtml
@@ -23,7 +23,7 @@
 <script src="~/js/site.js"></script>
 <!-- Latest compiled and minified CSS -->
 @*width:@(progressie[1] / progressie[0])%
-<span class="sr-only"></span>*@
+    <span class="sr-only"></span>*@
 
 
 <div class="row">
@@ -36,12 +36,12 @@
             </p>
 
             @*<p>
-                <div class="w3-container" onclick="">
-                    <div class="w3-light-grey" style="width:60%;margin: auto;">
-                        <div class="w3-container w3-blue w3-center" style="width:@((int)progressiePercentageCompleted)%"><span style="color:black">@((int)(progressiePercentageCompleted))%&nbsp;correct&nbsp;opgelost</span></div>
+                    <div class="w3-container" onclick="">
+                        <div class="w3-light-grey" style="width:60%;margin: auto;">
+                            <div class="w3-container w3-blue w3-center" style="width:@((int)progressiePercentageCompleted)%"><span style="color:black">@((int)(progressiePercentageCompleted))%&nbsp;correct&nbsp;opgelost</span></div>
+                        </div>
                     </div>
-                </div>
-            </p>*@
+                </p>*@
             <div>
                 <div id="pdf">
                     <object height="750" type="application/pdf" data="~/opdrachtenG1/@Model.Opdracht.Oefening.Opgave" id="pdf_content"></object>
@@ -66,15 +66,15 @@
                 <button onclick="hulp()" type="button">Hulp nodig?</button>
                 @*button om terug te gaan naar het overzicht als de groep geblokkeerd is*@
 
-                @if (Model.Groep.State == 3)
-                {
-                <p>Je bent geblokkeerd.</p>
-                <button type="submit" asp-controller="Spel" asp-action="Opnieuw" asp-route-sessiecode="@Model.Sessie.Code" asp-route-groepid="@Model.Groep.GroepId">Probeer opnieuw.</button>
-                }
-                else
-                {
-                <button type="submit" asp-controller="Spel" asp-action="SpelSpelen" asp-route-sessiecode="@Model.Sessie.Code">Probeer opnieuw.</button>
-                }
+                @*@if (Model.Groep.State == 3)
+                    {
+                    <p>Je bent geblokkeerd.</p>
+                    <button type="submit" asp-controller="Spel" asp-action="Opnieuw" asp-route-sessiecode="@Model.Sessie.Code" asp-route-groepid="@Model.Groep.GroepId">Probeer opnieuw.</button>
+                    }
+                    else
+                    {
+                    <button type="submit" asp-controller="Spel" asp-action="SpelSpelen" asp-route-sessiecode="@Model.Sessie.Code">Probeer opnieuw.</button>
+                    }*@
 
             </div>
 
@@ -90,20 +90,17 @@
 </div>
 
 @section scripts {
-<script asp-src-include="lib/jquery-validation/dist/jquery.validate.js"></script>
-<script asp-src-include="lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
+    <script asp-src-include="lib/jquery-validation/dist/jquery.validate.js"></script>
+    <script asp-src-include="lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
 
 
-<script>
+    <script>
         console.log("Antwoord " + @(Model.Opdracht.Oefening.Antwoord.ToString()));
         console.log("Toegangscode " + @(Model.ToegangscodeVolgendeOefening.ToString()));
         if ("@(Model.JuistGeantwoordOpgave)" == "True") {
             document.getElementById("Toegangscode").value = (@(Model.Opdracht.Oefening.Antwoord.ToString()));
 
             document.getElementById("JuistGeantwoordtoegangscodeStringId").value = "True";
-
-
-
 
             groepsantwoordJuist();
         }
@@ -149,12 +146,7 @@
                         console.log("inputvalue2 :" + j);
                         return false
                     }
-         if (@Model.TellerFoutePogingen >= 2) {
-                    document.getElementById("Antwoord").style.display = 'none';
-                    document.getElementById("Opnieuw").style.display = 'block';
-                    console.log("Teller " +@Model.TellerFoutePogingen);
-
-                }
+         
                     swal("Juist!", "Op naar de volgende oefening!", );
                         @(Model.JuistGeantwoordtoegangscode) = true;
                     setTimeout(delaySubmit, 1000);
@@ -165,9 +157,9 @@
         document.getElementById("formAntwoord").submit();
     }
 
-</script>
+    </script>
 
-<script>
+    <script>
 
 
         @*function blokkeerGroep() {
@@ -185,15 +177,15 @@
 
 
 
-</script>
+    </script>
 
 
 
-<script>
+    <script>
         @*console.log("Antwoord " + @Model.Opdracht.Oefening.Antwoord.ToString());
         console.log("Toegangscode " +@(Model.Groep.Pad.getNextOpdracht(Model.Opdracht).Toegangscode.Code.ToString()));
         console.log("progressie% completed " + @((int)progressiePercentageCompleted));*@
-</script>
+    </script>
 
 }
 
